<resources>
    <string name="app_name">MySQL server Testing</string>
    <string name="sql">sql</string>
    <string name="mobile">mobile</string>
    <string name="drivername">drivername</string>
    <string name="home">Home</string>
    <string name="discover">Discover</string>
    <string name="payments">Payments</string>
    <string name="chats">Chats</string>
    <string name="trips">Trips</string>
    <string name="settings">Settiings</string>
    <string name="support">Support</string>
    <string name="wish">Good Morning</string>
</resources>