<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android">
 <group>
     <item
         android:id="@+id/nav_home"
         android:title="@string/home"
         android:icon="@drawable/home"/>

     <item
         android:id="@+id/nav_discover"
         android:title="@string/discover"
         android:icon="@drawable/search"/>

     <item
         android:id="@+id/nav_chats"
         android:title="@string/chats"
         android:icon="@drawable/chat"/>

     <item
         android:id="@+id/nav_payments"
         android:title="@string/payments"
         android:icon="@drawable/payment"/>

     <item
         android:id="@+id/nav_trips"
         android:title="@string/trips"
         android:icon="@drawable/map"/>

     <item
         android:id="@+id/nav_settings"
         android:title="@string/settings"
         android:icon="@drawable/setting"/>

     <item
         android:id="@+id/nav_support"
         android:title="@string/support"
         android:icon="@drawable/support"/>

 </group>


<!--    <item-->
<!--        android:title="Profile">-->
<!--        <menu>-->
<!--            <group>-->
<!--            <item-->
<!--                android:id="@+id/nav_home"-->
<!--                android:title="@string/home"-->
<!--                android:icon="@drawable/main_menu_dashboard_icon"/>-->

<!--            <item-->
<!--                android:id="@+id/nav_d"-->
<!--                android:title="@string/home"-->
<!--                android:icon="@drawable/main_menu_dashboard_icon"/>-->

<!--            <item-->
<!--                android:id="@+id/nav_home"-->
<!--                android:title="@string/home"-->
<!--                android:icon="@drawable/main_menu_dashboard_icon"/>-->

<!--            <item-->
<!--                android:id="@+id/nav_home"-->
<!--                android:title="@string/home"-->
<!--                android:icon="@drawable/main_menu_dashboard_icon"/>-->

<!--            <item-->
<!--                android:id="@+id/nav_home"-->
<!--                android:title="@string/home"-->
<!--                android:icon="@drawable/main_menu_dashboard_icon"/>-->
<!--            </group>-->
<!--        </menu>-->
<!--    </item>-->
</menu>