<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:paddingTop="8dp"
    android:paddingLeft="20dp"
    android:background="@color/white">


    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wish"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="18sp" />

    <RelativeLayout
        android:layout_width="265dp"
        android:layout_height="110dp"
        android:layout_below="@+id/app_name"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="8dp">

        <ImageView
            android:layout_width="54dp"
            android:layout_height="52dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginTop="31dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="27dp"
            android:src="@drawable/ic_launcher_background" />

        <TextView
            android:id="@+id/menu_driver"
            android:layout_width="158dp"
            android:layout_height="32dp"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="32dp"
            android:text="@string/drivername" />

        <TextView
            android:id="@+id/editTextPhone"
            android:layout_width="132dp"
            android:layout_height="40dp"
            android:layout_below="@+id/menu_driver"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="22dp"
            android:layout_marginEnd="55dp"
            android:layout_marginBottom="6dp"
            android:ems="10"
            android:inputType="phone"
            android:text="@string/mobile" />

    </RelativeLayout>



    <ImageView
        android:layout_width="120dp"
        android:layout_height="140dp"
        android:src = "@drawable/taxi"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>